# corrector-crystal

./: .gitignore  CMakeLists.txt  MB Walk Times.ods  Main menu mockup.aseprite  README  TodoGen.py  UI Markup.ase  asamiya.c  autoFrame.py  characterDrafts.md  corrector.c  genPalBase.py  notes.todo  paletteTinker.py  testshader.fs
Documentation/: Action.md  Animation.md
Graphics/Ui/: NamePalettePlate.aseprite  button.ase  charasele.aseprite  charaselebutton-base.aseprite  charaselebutton.aseprite  wing-2.aseprite
audio/music/: LG S5200 Ringtone - Vanilla Sky-mHq2GWAk4KY.webm
fighterData/: superman.jsonc  superman.pal  superman_stable.jsonc  superman_unstable.json
fighterData/Projectiles/: Aoko_FireballA.json
hitboxextractor/: hitbox2.py
include/: Action.h  Animation.h  CC_Audio.h  CC_Consts.h  CC_Input.h  Entities.h  Entity.h  EntityState.h  Fighter.h  FighterFlags.h  Fighter_Read.h  Fighter_Write.h  Hitbox.h  Json_Extension.h  Match.h  Menus_Pause.h  Motion.h  Player.h  QFramework_Input.h  RectI.h  Rectangle.h  Stick.h  TestMenus.h  Types.h  Ui_Base.h  Ui_Button.h  Ui_Label.h  Ui_List.h  Ui_Match.h  Ui_Menu.h  Ui_Preview.h  Ui_Sprite.h  Ui_Types.h  Vec2I.h  Vector2.h  circular_buffer.h  foo.h  main.h  qtypes.h  stretchy_buffer.h
paletteExtractor/: bluepal.txt  out.txt  paletteExtractor.py  red.txt  redalt.txt
src/: Action.c  Animation.c  CC_Audio.c  CC_Input.c  Entities.c  Entity.c  Fighter.c  Fighter_Read.c  Fighter_Write.c  Hitbox.c  Json_Extension.c  Match.c  Menus_Pause.c  Motion.c  Player.c  QFramework_Input.c  RectI.c  Rectangle.c  Stick.c  TestMenus.c  UI_Match.c  Ui_Base.c  Ui_Button.c  Ui_Label.c  Ui_List.c  Ui_Menu.c  Ui_Preview.c  Ui_Sprite.c  Vec2I.c  Vector2.c  foo.c  main.c
